single-soft-tutorial

--- a/src/html/soft/header.html
+++ b/src/html/soft/header.html
@@ -5,11 +5,14 @@
   <div class="single-soft-header-link">
     <div class="single-soft-header-container">
       <ul class="single-soft-header-ul">
-        <li class="single-soft-header-li single-soft-header-active">
-          <span>Загрузка программного обеспечения</span>
+        <li class="single-soft-header-li">
+          <a href="/single-soft.html">Загрузка программного обеспечения</a>
         </li>
         <li class="single-soft-header-li">
-          <span>Инструкция</span>
+          <a href="/single-soft-manual.html">Инструкция</a>
+        </li>
+        <li class="single-soft-header-li single-soft-header-active">
+          <a href="/single-soft-tutorial.html">Руководство</a>
         </li>
       </ul>
     </div>
