--- a/src/html/soft/manual.html
+++ b/src/html/soft/manual.html
@@ -1,7 +1,7 @@
 <div class="single-soft-manual">
   @@include("header.html")
-  <div class="single-soft-manual-instruction">
-    <div class="single-soft-manual-instruction-container">
+  <div class="single-soft-manual">
+    <div class="single-soft-manual-container">
       @@include("../chunk/bread.html")
       <div class="pro-cards">
         <div class="pro-card-out">
