--- a/src/html/products/rashodniki.html
+++ b/src/html/products/rashodniki.html
@@ -6,10 +6,215 @@
       </div>
       <div class="rashodniki">
         <div class="rashodniki-container">
-            <h2>BLT 100 150</h2>
+          <h2 class="rashodniki-container__title">BOCI BLT421 (100:150)</h2>
           <div class="rashodniki-items">
-<!--           ВОТ ТУТ НУЖЕН КОД ТАБЛИЦЫ (АДАПТИВНОЙ)-->
-            </div>
+            <table>
+              <thead>
+                <tr>
+                  <th>Наименование</th>
+                  <th>Артикул</th>
+                  <th>Цена</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="rashodniki-container">
+          <h2 class="rashodniki-container__title">BOCI BLT421 (100:150)</h2>
+          <div class="rashodniki-items">
+            <table>
+              <thead>
+                <tr>
+                  <th>Наименование</th>
+                  <th>Артикул</th>
+                  <th>Цена</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Защитное стекло</td>
+                  <td>
+                    <span>D21.5T2-4</span>
+                  </td>
+                  <td>
+                    <p>от 6 412,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D21.5T2-4</td>
+                  <td>
+                    <span>P.S.M0240</span>
+                  </td>
+                  <td>
+                    <p>от 14 250,00 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Картридж защитного стекла D34.0T5-4 №2</td>
+                  <td>
+                    <span>DP.M.Q0078AA</span>
+                  </td>
+                  <td>
+                    <p>от 24 937,50 ₽</p>
+                    <a href="javascript:void(0);">Заказать</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
